--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.5.1",
+    "@material-ui/icons": "^4.5.1",
+    "@material-ui/styles": "^4.5.0",
     "axios": "^0.19.0",
     "isomorphic-unfetch": "^3.0.0",
     "js-cookie": "^2.2.1",
     "next": "^9.0.0",
     "next-redux-wrapper": "^4.0.1",
+    "nextjs-progressbar": "0.0.4",
+    "nprogress": "^0.2.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-markdown": "^4.0.6",
